--- a/resource_library/src/main/res/values/strings.xml
+++ b/resource_library/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Resource_Library</string>
+    <string name="teacher_client_name">教师端</string>
+    <string name="student_client_name">学生端</string>
+    <string name="analysis_client_name">分析端</string>
+    <string name="developer">nerolink</string>
 </resources>
